# PoseButcher

./: .gitignore  .readthedocs.yaml  README.md  example.ipynb  pyproject.toml  test_o3d.ipynb
docs/: requirements.txt
docs/source/: api_reference.rst  butcher.rst  conf.py  index.rst  o3d.rst  vector.rst
posebutcher/: __init__.py  butcher.py  o3d.py  vtk.py
test_data/: 2a_bases.sdf  2a_fragments.sdf  BBS_AMU_products_fragalysis.sdf
